// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_group should expand and collapse correctly, expanded by default, collapsed and then expanded again 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value=""
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value=""
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should expand and collapse correctly, expanded by default, collapsed and then expanded again 2`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow "
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value=""
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions "
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value=""
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should expand and collapse correctly, expanded by default, collapsed and then expanded again 3`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value=""
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value=""
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable with all permissions 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value="checked"
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value="checked"
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value="checked"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable with all permissions and read-only 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row  read-only"
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value="checked"
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value="checked"
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value="checked"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable with all permissions from parentRole 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row  read-only"
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value="checked"
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      inherited={
        Object {
          "permissions": Array [
            "invite_user",
            "add_user_to_team",
          ],
        }
      }
      key="invite_user"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value="checked"
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      inherited={
        Object {
          "permissions": Array [
            "invite_user",
            "add_user_to_team",
          ],
        }
      }
      key="add_user_to_team"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value="checked"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable with some permissions 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value="intermediate"
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value="checked"
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable with some permissions and read-only 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row  read-only"
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value="intermediate"
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value="checked"
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable with some permissions from parentRole 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value="intermediate"
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      inherited={
        Object {
          "permissions": Array [
            "invite_user",
          ],
        }
      }
      key="invite_user"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value="checked"
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      readOnly={false}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable without every permission out of the scope 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value=""
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value=""
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable without permissions 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row "
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value=""
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value=""
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_group should match snapshot on editable without permissions and read-only 1`] = `
<div
  className="permission-group"
>
  <div
    className="permission-group-row  read-only"
    id="uniqId"
    onClick={[Function]}
  >
    <div
      className="fa fa-caret-right permission-arrow open"
      onClick={[Function]}
    />
    <PermissionCheckbox
      id="uniqId-checkbox"
      value=""
    />
    <span
      className="permission-name"
    >
      name
    </span>
    <PermissionDescription
      description=""
      id="name"
      selectRow={[MockFunction]}
    />
  </div>
  <div
    className="permission-group-permissions open"
  >
    <PermissionRow
      additionalValues={Object {}}
      id="invite_user"
      key="invite_user"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-invite_user"
      value=""
    />
    <PermissionRow
      additionalValues={Object {}}
      id="add_user_to_team"
      key="add_user_to_team"
      onChange={[Function]}
      readOnly={true}
      selectRow={[MockFunction]}
      uniqId="uniqId-add_user_to_team"
      value=""
    />
  </div>
</div>
`;
